# prime_tools

./: Cargo.toml  README.md  README.me
src/: lib.rs  main.rs
