[package]
name = "prime_tools"
version = "0.1.3"
license = "MIT"
authors = ["Dan Medani <danmedani@gmail.com>"]
edition = "2018"
description = "Generate primes, get prime factors, other useful prime-related utilities."

repository = "https://github.com/danmedani/prime_tools"
keywords = ["primes", "math", "factors", "eratosthenes"]

readme = "README.md"

categories = ["algorithms"]

[dependencies]
bit-vec = "0.6.1"
libmath = "0.1.4"
